<resources>
    <string name="app_name">PlaceNotifier</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_place_picker">Map</string>


    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>


    <string name="active_notifications_list">Active notifiers</string>
    <string name="synchronization_menu">Synchronization</string>
    <string name="settings_menu">Settings</string>
    <string name="info_menu">Info</string>
    <string name="title_activity_notifications_list">NotificationsListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_menu_group">general</string>
    <string name="others_menu_group">other</string>

    <string name="alarms_list_header_text">Sorted by</string>
    <string name="customizer_place_isn_t_important">Place isn\'t important</string>
    <string name="customizer_time_isn_t_important">Time isn\'t important</string>
    <string name="title_activity_notification_editor">Notification settings</string>

    <string name="hello">Hello World!</string>
    <string name="title">Hello Notification!</string>
    <string name="notification_posted">Notification posted</string>

    <string name="alarm_notification_title_template">Alarm: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="alarm_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="customize_engine_time_interval_from">from</string>
    <string name="customize_engine_time_interval_to">to</string>
    <string name="customize_engine_alarm_general_settings">General settings</string>
    <string name="customize_engine_alarm_time_settings">Time settings</string>
    <string name="customize_engine_notification_place_settings">Place settings</string>
    <string name="import_events">Import events</string>
    <string name="select_all">Select all</string>
    <string name="find_by_name">Find by name</string>
    <string name="place_picker_customize_engine_title">Choose point in map</string>
    <string name="address_picker_customize_engine_title">Find place by address</string>
    <string name="combined_beacon_piker_customize_engine">Choose place somehow</string>
    <string name="customize_engine_hot_point_general_settings">General settings</string>
    <string name="customize_engine_hot_point_place_settings">Place settings</string>
    <string name="title_activity_hot_point_editor">Hot Point settings</string>
    <string name="hot_points_list_title">Your hot points:</string>
    <string name="choose_by_hot_point">Choose by hot point</string>
    <string name="find_hot_point">Find hot point</string>
    <string name="import_calendar">Import calendar</string>
    <string name="title_activity_events_loading">Converting events</string>
    <string name="hot_points">Hot points</string>
    <string name="google_drive">Google Drive</string>
    <string name="download_from_google_drive">Download from Google Drive</string>
    <string name="upload_on_google_drive">Upload on Google Drive</string>
    <string name="info">
        This application was written by students of the Academic University.
        See also: \n https://github.com/ArtyomLobanov/place-notifier
        \n http://mit.spbau.ru/sewiki/index.php/PlaceNotifier
    </string>
</resources>
