<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general_menu_group">
        <menu>
            <item
                android:id="@+id/active_alarms_menu"
                android:title="@string/active_notifications_list"
                android:icon="@android:drawable/ic_menu_more" />
            <item android:title="Google Drive"
                android:id="@+id/google_drive"
                android:icon="@drawable/common_google_signin_btn_icon_light_disabled" />
            <item
                android:id="@+id/synchronization_menu"
                android:title="@string/synchronization_menu"
                android:icon="@android:drawable/ic_menu_rotate" />
        </menu>
    </item>

    <item android:title="@string/others_menu_group">
        <menu>
            <item
                android:id="@+id/settings_menu"
                android:title="@string/settings_menu"
                android:icon="@android:drawable/ic_menu_manage" />

            <item
                android:id="@+id/info_menu"
                android:title="@string/info_menu"
                android:icon="@android:drawable/ic_dialog_info" />

        </menu>
    </item>
</menu>
